# librpg

./: pyproject.toml
src/librpg/: __init__.py  dice.py  rids.py
