[project]
name = "librpg"
version = "0.2.1"
description = "Common RPG tools for web appications like Dramaris Personae, WaWWoD and Dragonade."
readme = "README.md"
authors = [
    { name = "Zaffarelli", email = "zaffarelli@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
